--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -2518,6 +2518,8 @@ div#pargrapheIntro {
 		padding: 1em 0 0 0 !important;
 		max-width: 90vw !important;
 		padding: 5em 1em 1em 1em !important;
+		position: relative;
+		z-index: 10;
 
 		* {
 			padding: 0em !important;
@@ -2614,175 +2616,147 @@ div#pargrapheIntro {
 	}
 
 	@mixin open() {
-		z-index: 10 !important;
-		height: 100vh !important;
-		width: 100% !important;
-		opacity: 100 !important;
-		transition: all 0.4s ease-in-out 0.2s;
-		visibility: visible;
-		position: absolute !important;
-		background: white !important;
-		box-shadow: 0 0 4px rgba(0, 0, 0, 0.699) !important;
-	}
+		z-index: 10000 !important;
 
-	.swiper-slide {
-		/* 		background-position: center center !important;
+		@mixin open() {
+			z-index: 10 !important;
+			height: 100vh !important;
+			width: 100% !important;
+			opacity: 100 !important;
+			transition: all 0.4s ease-in-out 0.2s;
+			visibility: visible;
+			position: absolute !important;
+			background: white !important;
+			box-shadow: 0 0 4px rgba(0, 0, 0, 0.699) !important;
+		}
+
+		.swiper-slide {
+			/* 		background-position: center center !important;
  */
-		background-size: auto !important;
-	}
+			background-size: auto !important;
+		}
 
-	#header-alt,
-	#header {
-		display: none !important;
-	}
+		#header-alt,
+		#header {
+			display: none !important;
+		}
 
-	.cartouche {
-		span {
+		.cartouche {
+			span {
+				font-size: 15px !important;
+				line-height: 15px !important;
+				margin-bottom: 1em !important;
+			}
+
+			h3 {
+				font-size: 28px !important;
+				line-height: 39px !important;
+				/* padding: 1em; */
+			}
+		}
+
+		#mouf {
 			font-size: 15px !important;
-			line-height: 15px !important;
-			margin-bottom: 1em !important;
+			right: 0px !important;
+			line-height: 50px !important;
 		}
 
-		h3 {
-			font-size: 28px !important;
-			line-height: 39px !important;
-			/* padding: 1em; */
-		}
-	}
-
-	#mouf {
-		font-size: 15px !important;
-		right: 0px !important;
-		line-height: 50px !important;
-	}
-
-	#menumobile {
-		display: flex;
-		position: fixed;
-		top: 0;
-		right: 0;
-		left: 0;
-		z-index: 100000;
-		justify-content: space-between;
-		padding: 10px 10px;
-
-		.logocontainer {
-			img {
-				width: 57px !important;
-			}
-		}
-
-		#menutrigger {
+		#menumobile {
+			display: flex;
+			position: fixed;
+			top: 0;
 			right: 0;
-			position: absolute;
+			left: 0;
+			z-index: 100000;
+			justify-content: space-between;
+			padding: 10px 10px;
 
-			z-index: 10000;
+			.logocontainer {
+				img {
+					width: 57px !important;
+				}
+			}
 
-			img {
-				width: 40px !important;
+			#menutrigger {
+				right: 0;
+				position: absolute;
+
+				z-index: 10000;
+
+				img {
+					width: 40px !important;
+				}
 			}
 		}
-	}
 
-	.swiper {
-		overflow: hidden;
-	}
+		.swiper {
+			overflow: hidden;
+		}
 
-	.sidebar {
-		opacity: 0;
-		z-index: 0;
-		height: 100vh !important;
-		/* 
+		.sidebar {
+			opacity: 0;
+			z-index: 0;
+			height: 100vh !important;
+			/* 
 		opacity: 1 !important;
 		z-index: 10 !important;
 		height: 100% !important; */
-		top: 0 !important;
-		width: 100% !important;
-		transition: all 0.4s ease-in-out 0.2s;
-		position: absolute !important;
-		background: white !important;
-		box-shadow: 0 0 4px rgba(0, 0, 0, 0.699) !important;
-		margin: 0 auto;
-		padding: 1em;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
+			top: 0 !important;
+			width: 100% !important;
+			transition: all 0.4s ease-in-out 0.2s;
+			position: absolute !important;
+			background: white !important;
+			box-shadow: 0 0 4px rgba(0, 0, 0, 0.699) !important;
+			margin: 0 auto;
+			padding: 1em;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
 
-		.logocontainer {
-			display: flex !important;
-			align-items: center !important;
-			justify-content: center !important;
-			flex-direction: column !important;
-			order: 1 !important;
-
-			a {
+			.logocontainer {
 				display: flex !important;
 				align-items: center !important;
 				justify-content: center !important;
 				flex-direction: column !important;
-				text-align: center !important;
+				order: 1 !important;
+
+				a {
+					display: flex !important;
+					align-items: center !important;
+					justify-content: center !important;
+					flex-direction: column !important;
+					text-align: center !important;
+				}
 			}
-		}
 
-		img {
-			width: 50% !important;
-		}
-
-		img {
-			margin-top: 1em;
-		}
-
-		ul {
-			margin-top: 2em !important;
-		}
-
-		li {
-			margin: 1rem 0 !important;
-			padding: 0 !important;
-			align-items: center !important;
-		}
-
-		&.open {
-			@include open();
-		}
-
-		#menulinks {
-			padding: 2em 0 0 0em !important;
-			text-align: center !important;
-			justify-content: center !important;
-			align-items: center !important;
-
-			a {
-				font-size: 15px !important;
+			img {
+				width: 50% !important;
 			}
-		}
 
-		* {}
+			img {
+				margin-top: 1em;
+			}
 
-		&.open {
-			@include open();
+			ul {
+				margin-top: 2em !important;
+			}
 
-			* {}
-		}
-	}
+			li {
+				margin: 1rem 0 !important;
+				padding: 0 !important;
+				align-items: center !important;
+			}
 
-	#lagence {
-		.sidebar {
-			width: 0vw !important;
-			height: 0vh !important;
-			max-width: auto;
-			opacity: 0;
-			visibility: hidden;
-			justify-content: center !important;
-			padding-top: 0em !important;
-
-			justify-content: center !important;
+			&.open {
+				@include open();
+			}
 
 			#menulinks {
-				padding: 0em !important;
+				padding: 2em 0 0 0em !important;
 				text-align: center !important;
 				justify-content: center !important;
+				align-items: center !important;
 
 				a {
 					font-size: 15px !important;
@@ -2798,256 +2772,289 @@ div#pargrapheIntro {
 			}
 		}
 
-		#lemain {
-			width: 100vw !important;
+		#lagence {
+			.sidebar {
+				width: 0vw !important;
+				height: 0vh !important;
+				max-width: auto;
+				opacity: 0;
+				visibility: hidden;
+				justify-content: center !important;
+				padding-top: 0em !important;
 
-			&.full {
+				justify-content: center !important;
+
+				#menulinks {
+					padding: 0em !important;
+					text-align: center !important;
+					justify-content: center !important;
+
+					a {
+						font-size: 15px !important;
+					}
+				}
+
+				* {}
+
+				&.open {
+					@include open();
+
+					* {}
+				}
+			}
+
+			#lemain {
 				width: 100vw !important;
+
+				&.full {
+					width: 100vw !important;
+				}
+			}
+		}
+
+		#die {
+			padding: 1em !important;
+		}
+
+		#slide1 {
+			padding: 1em !important;
+
+
+			h3 {
+				font-size: 14px !important;
+				line-height: 14px !important;
+			}
+
+			p,
+			span {
+				font-size: 18px !important;
+				line-height: 22px !important;
+
+				br {
+					display: inline !important;
+				}
+			}
+		}
+
+		#slide2 {
+
+
+			.row {
+				padding: 0em !important;
+				margin: 0em !important;
+				max-width: 100vw !important;
+			}
+
+			.inner {
+				padding-top: 4px !important;
+			}
+
+			img {
+				max-width: 45px !important;
+			}
+
+			* {
+				text-align: center;
+				font-size: 11px !important;
+				line-height: 14px !important;
+			}
+		}
+
+		#slide3 {
+
+
+			* {
+				font-size: 12px !important;
+				line-height: 14px !important;
+			}
+		}
+
+		#slide4 {
+
+
+			ul {
+				li {
+					line-height: 37px !important;
+					font-size: 4vh !important;
+				}
 			}
 		}
 	}
 
-	#die {
-		padding: 1em !important;
-	}
-
-	#slide1 {
-		padding: 1em !important;
-
-
-		h3 {
-			font-size: 14px !important;
-			line-height: 14px !important;
+	@media (min-width: 1024px) {
+		.rakim {
+			display: none !important;
 		}
 
-		p,
-		span {
-			font-size: 18px !important;
-			line-height: 22px !important;
-
-			br {
-				display: inline !important;
-			}
-		}
-	}
-
-	#slide2 {
-
-
-		.row {
-			padding: 0em !important;
-			margin: 0em !important;
-			max-width: 100vw !important;
+		#menutrigger {
+			display: none;
+			background: none;
+			border: none;
 		}
 
-		.inner {
-			padding-top: 4px !important;
+		#menumobile {
+			display: none !important;
 		}
-
-		img {
-			max-width: 45px !important;
-		}
-
-		* {
-			text-align: center;
-			font-size: 11px !important;
-			line-height: 14px !important;
-		}
-	}
-
-	#slide3 {
-
-
-		* {
-			font-size: 12px !important;
-			line-height: 14px !important;
-		}
-	}
-
-	#slide4 {
-
-
-		ul {
-			li {
-				line-height: 37px !important;
-				font-size: 4vh !important;
-			}
-		}
-	}
-}
-
-@media (min-width: 1024px) {
-	.rakim {
-		display: none !important;
 	}
 
 	#menutrigger {
-		display: none;
 		background: none;
 		border: none;
+
+		span {
+			font-size: 3em;
+			color: white;
+		}
 	}
 
-	#menumobile {
-		display: none !important;
+	.dana {
+		color: $primary !important;
 	}
-}
 
-#menutrigger {
-	background: none;
-	border: none;
-
-	span {
-		font-size: 3em;
-		color: white;
+	#contactsz {
+		h2 {
+			font-size: 12px;
+		}
 	}
-}
 
-.dana {
-	color: $primary !important;
-}
 
-#contactsz {
-	h2 {
-		font-size: 12px;
+	.selectivebn img {
+		color: #000;
+		filter: invert(1);
 	}
-}
 
-.selectivebn img {
-	color: #000;
-	filter: invert(1);
-}
-
-.selectivebn {
-	padding-bottom: 3px;
-}
-
-.slide2-p .inner {
-	padding: 0px 20px;
-}
-
-.placeholder-text {
-	bottom: 20px;
-	color: #ffffff;
-	font-size: 14px;
-	font-weight: bold;
-	position: absolute;
-	text-align: left;
-	width: 100%;
-	z-index: 1;
-	-webkit-transition: all ease-out 0.5s;
-	transition: all ease-out 0.5s;
-}
-
-textarea {
-	resize: vertical;
-	position: relative;
-}
-
-.form-group {
-	position: relative;
-}
-
-@media (min-width: 1200px) {
-
-	#rencontres .h3,
-	#rencontres h3 {
-		font-size: 90px !important;
+	.selectivebn {
+		padding-bottom: 3px;
 	}
-}
 
-#rencontres {
-	padding-top: 100px;
-	background: linear-gradient(to bottom, #80368c, #2c348b);
-	height: auto;
-	display: flex;
-	align-content: space-around;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	.slide2-p .inner {
+		padding: 0px 20px;
+	}
 
-	#untel {
-		padding-bottom: 60px;
+	.placeholder-text {
+		bottom: 20px;
+		color: #ffffff;
+		font-size: 14px;
+		font-weight: bold;
+		position: absolute;
+		text-align: left;
 		width: 100%;
+		z-index: 1;
+		-webkit-transition: all ease-out 0.5s;
+		transition: all ease-out 0.5s;
+	}
 
-		form {
-			margin: 16px auto 0 auto;
+	textarea {
+		resize: vertical;
+		position: relative;
+	}
 
-			input[type=submit] {
-				background-color: transparent !important;
-				color: #fff;
-				margin-top: 5em;
-				text-transform: uppercase;
-				cursor: pointer;
-				padding: 10px 20px;
-				border-radius: 4px;
-				font-size: 16px;
-				max-width: 250px;
-				border: 1px solid #fff;
-				border-radius: 25px;
+	.form-group {
+		position: relative;
+	}
+
+	@media (min-width: 1200px) {
+
+		#rencontres .h3,
+		#rencontres h3 {
+			font-size: 90px !important;
+		}
+	}
+
+	#rencontres {
+		padding-top: 100px;
+		background: linear-gradient(to bottom, #80368c, #2c348b);
+		height: auto;
+		display: flex;
+		align-content: space-around;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+		#untel {
+			padding-bottom: 60px;
+			width: 100%;
+
+			form {
+				margin: 16px auto 0 auto;
+
+				input[type=submit] {
+					background-color: transparent !important;
+					color: #fff;
+					margin-top: 5em;
+					text-transform: uppercase;
+					cursor: pointer;
+					padding: 10px 20px;
+					border-radius: 4px;
+					font-size: 16px;
+					max-width: 250px;
+					border: 1px solid #fff;
+					border-radius: 25px;
+				}
+
 			}
 
+			#form-element {
+				padding: 10px 10% !important;
+				width: 100%;
+
+				div {
+					/* display: flex; */
+					width: 100%;
+					padding: 10px;
+				}
+			}
 		}
 
 		#form-element {
-			padding: 10px 10% !important;
-			width: 100%;
+			display: flex;
+		}
 
-			div {
-				/* display: flex; */
-				width: 100%;
-				padding: 10px;
-			}
+		#societe {
+			width: 100%;
+		}
+
+		#email {
+			width: 100%;
+		}
+
+		span {
+			font-family: "new-order", sans-serif;
+			font-size: 50px;
+			line-height: 52px;
+			font-weight: 600;
+			color: white;
+			text-transform: uppercase;
+		}
+
+		h3 {
+			font-family: "new-order", sans-serif;
+			font-size: 90px;
+			line-height: 110px;
+			font-weight: 700;
+			color: white;
+			text-transform: uppercase;
+		}
+
+		a {
+			width: 200px;
+			height: 40px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			font-family: "new-order", sans-serif;
+			text-transform: uppercase;
+			text-decoration: none;
+			color: white;
+			font-weight: 600;
+			border: 2px solid white;
+			border-radius: 20px;
+			top: 30px;
 		}
 	}
 
-	#form-element {
-		display: flex;
+	.fade-out {
+		opacity: 0;
+		transition: opacity 0.5s;
 	}
-
-	#societe {
-		width: 100%;
-	}
-
-	#email {
-		width: 100%;
-	}
-
-	span {
-		font-family: "new-order", sans-serif;
-		font-size: 50px;
-		line-height: 52px;
-		font-weight: 600;
-		color: white;
-		text-transform: uppercase;
-	}
-
-	h3 {
-		font-family: "new-order", sans-serif;
-		font-size: 90px;
-		line-height: 110px;
-		font-weight: 700;
-		color: white;
-		text-transform: uppercase;
-	}
-
-	a {
-		width: 200px;
-		height: 40px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		font-family: "new-order", sans-serif;
-		text-transform: uppercase;
-		text-decoration: none;
-		color: white;
-		font-weight: 600;
-		border: 2px solid white;
-		border-radius: 20px;
-		top: 30px;
-	}
-}
-
-.fade-out {
-	opacity: 0;
-	transition: opacity 0.5s;
 }
